--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bs58": "^4.0.1",
     "bytebuffer": "^5.0.1",
     "detect-node": "^2.0.3",
+    "dns.js": "^1.0.1",
     "ecurve": "^1.0.5",
     "fetch-ponyfill": "^4.1.0",
     "lodash": "^4.17.4",
@@ -23,14 +24,21 @@
     "react-native-crypto": "^2.1.0",
     "react-native-device-info": "^0.11.0",
     "react-native-elements": "^0.17.0",
+    "react-native-http": "tradle/react-native-http#834492d",
     "react-native-i18n": "^2.0.6",
+    "react-native-level-fs": "^3.0.0",
+    "react-native-os": "^1.0.1",
     "react-native-randombytes": "^3.0.0",
+    "react-native-tcp": "^3.2.1",
+    "react-native-udp": "^2.1.0",
+    "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^4.4.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "reactotron-react-native": "^1.12.3",
     "reactotron-redux": "^1.12.2",
     "reactotron-redux-saga": "^1.12.2",
+    "readable-stream": "1.0.33",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^4.10.0",
@@ -40,17 +48,10 @@
     "seamless-immutable": "^7.1.2",
     "secure-random": "^1.1.1",
     "stream": "^0.0.2",
-    "styled-components": "^2.1.2",
-    "dns.js": "^1.0.1",
-    "react-native-http": "tradle/react-native-http#834492d",
-    "react-native-os": "^1.0.1",
-    "react-native-level-fs": "^3.0.0",
-    "react-native-udp": "^2.1.0",
     "stream-browserify": "^1.0.0",
+    "styled-components": "^2.1.2",
     "timers-browserify": "^1.0.1",
-    "url": "~0.10.1",
-    "react-native-tcp": "^3.2.1",
-    "readable-stream": "1.0.33"
+    "url": "~0.10.1"
   },
   "devDependencies": {
     "babel-jest": "21.0.2",
