--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "android:sign": "jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore android/app/release.keystore android/app/build/outputs/apk/app-release-unsigned.apk $MYAPP_RELEASE_KEY_ALIAS --storepass $MYAPP_RELEASE_STORE_PASSWORD --keypass $MYAPP_RELEASE_KEY_PASSWORD",
     "test": "jest",
-    "haul": "haul start"
+    "haul": "haul start",
+    "start:logger": "LOGGER_ENABLED=true npm start",
+    "log:android": "node node_modules/react-native/local-cli/cli.js log-android",
+    "postinstall": "./node_modules/.bin/rn-nodeify --hack"
   },
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -20,6 +23,7 @@
     "fetch-ponyfill": "^4.1.0",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.3",
     "react-native-crypto": "^2.1.0",
@@ -46,8 +50,10 @@
     "redux-persist-transform-encrypt": "^1.0.2",
     "redux-saga": "^0.15.6",
     "reduxsauce": "^0.6.0",
+    "remove-markdown": "^0.2.2",
     "seamless-immutable": "^7.1.2",
     "secure-random": "^1.1.1",
+    "steem": "^0.6.4",
     "stream": "^0.0.2",
     "stream-browserify": "^1.0.0",
     "styled-components": "^2.1.2",
