Added Tabs in Home Screen
Addded Tabs for New, Hot, Trending, Promoted

Added Build tasks for android

Added Small README

Added GPL LICENSE

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -61,6 +61,28 @@
         "focus": false,
         "panel": "shared"
       }
+    },
+    {
+      "type": "npm",
+      "script": "build:android",
+      "problemMatcher": [],
+      "presentation": {
+        "echo": true,
+        "reveal": "never",
+        "focus": false,
+        "panel": "shared"
+      }
+    },
+    {
+      "type": "npm",
+      "script": "android:run",
+      "problemMatcher": [],
+      "presentation": {
+        "echo": true,
+        "reveal": "never",
+        "focus": false,
+        "panel": "shared"
+      }
     }
   ]
 }
